src/styles/components/_header.scss
@use "../base/base" as *;

.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 3;
  background-color: var(--background-color);
  padding-block: 26px;

  &__wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 32px
  }

  &__nav-group {
    display: flex;
    align-items: center;
    gap: 32px;
  }

  &__burger-group {
    display: flex;
    align-items: center;
    gap: 16px;
  }

  &__menu {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--color-accent);
    border: 2px solid var(--color-accent);
    width: 40px;
    height: 40px;
    cursor: pointer;
    z-index: 2;
    position: relative;
    border-radius: 8px;

    @include tab {
      @include sr-only;
    }

    &-icon,
    &-icon::before,
    &-icon::after {
      content: "";
      display: block;
      height: 2px;
      width: 18px;
      background-color: var(--color-icon-white);
      transition: all 0.3s ease;
      position: absolute;
      border-radius: 2px;
    }

    &-icon::before {
      top: -6px;
    }

    &-icon::after {
      top: 6px;
    }

    // Burger animation when open
    &.is-open .header__menu-icon {
      background-color: transparent;

      &::before {
        transform: rotate(45deg);
        top: 0;
      }

      &::after {
        transform: rotate(-45deg);
        top: 0;
      }
    }
  }

  &__actions {
    display: flex;
    align-items: center;
    gap: 8px;
  }
}

